# nexus-exchange-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  endpoints.txt  release-please-config.json
.github/workflows/: ci.yml  installer-deploy.yml  minisign.yml  release-please.yml  release.yml  spec-drift.yml
examples/: README.md  account.sh  batch_orders.json  keys_and_agents.sh  market_data.sh  north_star.sh  streaming.sh  trading.sh
installer/: README.md  package-lock.json  package.json  wrangler.toml
installer/src/: installer.mjs  installer.test.mjs
scripts/: check_spec_drift.py
src/: api.rs  auth.rs  cli.rs  credentials.rs  main.rs  output.rs  wire.rs  wsclient.rs
tests/: cli.rs  coverage.rs  smoke.rs
wix/: main.wxs
