[package]
name = "nexus-exchange-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Command-line interface for the Nexus Exchange API"
# Required by the WiX/MSI installer (dist refuses to generate main.wxs without it).
authors = ["Nexus <oss@nexus.xyz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexus-xyz/nexus-exchange-cli"
homepage = "https://github.com/nexus-xyz/nexus-exchange-cli"
keywords = ["nexus", "exchange", "trading", "crypto", "cli"]
categories = ["command-line-utilities"]
publish = false

# The crate is `publish = false` (it is distributed as a prebuilt binary, not on
# crates.io), which by default hides it from dist. Opt the binary back in so dist
# packages and releases it.
[package.metadata.dist]
dist = true

# WiX/MSI settings for the Windows `msi` installer. The GUIDs are stable
# identifiers for the product upgrade code and install path — generated once and
# kept fixed so successive .msi versions upgrade cleanly rather than installing
# side by side. License/EULA dialogs are disabled (the CLI has no separate EULA).
[package.metadata.wix]
upgrade-guid = "640C0E23-1A10-46B1-ACC9-87AC429A3053"
path-guid = "6D86B1C3-134F-46C7-9B25-526D040A98AD"
license = false
eula = false

# cargo-binstall support. These templates describe exactly where dist uploads
# release artifacts and how they are laid out, so `cargo binstall
# nexus-exchange-cli` fetches a prebuilt binary instead of compiling from source.
# They mirror the artifacts verified with `dist build`:
#   URL : <repo>/releases/download/v<version>/nexus-exchange-cli-<target>.tar.gz
#   into: a nexus-exchange-cli-<target>/ directory containing the `nexus` binary
# Keep these in sync with dist-workspace.toml (archive format + naming) if either
# changes.
#
# The `v` in `download/v{ version }` is load-bearing: binstall reconstructs the
# upload URL from this template, so releases MUST be tagged `vX.Y.Z` (the
# documented `git tag vX.Y.Z` flow). The release workflow's tag glob also accepts
# a bare `X.Y.Z` tag, but binstall would look for the artifact under `v<version>`
# and miss it — always keep the `v` prefix on tags.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"

# Windows ships a .zip rather than a .tar.gz; only the format differs.
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# The Nexus Exchange SDK. The crate is not yet on crates.io (it ships with
# `publish = false`), so we depend on it from git, pinned to `main`. Swap this
# for a `version = "x.y"` line once the SDK is published.
#
# The CLI is a thin command/output layer over this SDK: every request — public
# market data, the authenticated account, trading, and WebSocket streaming —
# goes through `Client`, which owns request signing, the HTTP/WS transport, and
# the wire types. The CLI carries no transport of its own.
nexus-exchange = { git = "https://github.com/nexus-xyz/nexus-exchange-rs", branch = "main" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `signal` powers the Ctrl-C shutdown of `nexus ws`.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
rpassword = "7"

# Dev-only: the `tests/smoke.rs` integration test runs the built `nexus` binary
# (`assert_cmd`) against a local mock HTTP server (`wiremock`, the same mock the
# SDK's own integration tests use) serving canned, spec-shaped responses. This
# keeps the smoke offline and deterministic — no live network. tokio is already
# a runtime dependency; the test reuses it for the async mock server.
[dev-dependencies]
assert_cmd = "2"
wiremock = "0.6"

# Release-build profile used by `dist`. Inherits the standard release profile and
# enables thin LTO for smaller, faster shipped binaries without the long compile
# times of full LTO.
[profile.dist]
inherits = "release"
lto = "thin"
